# sem12

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  greedy_dfs.cpp  main.cpp
docs/: greedy_dfs_visualization.html
include/: ai.h  game.h  greedy_dfs.h
output/: map_latest.json
part2/: CMakeLists.txt
part2/src/: main.cpp
src/: CMakeLists.txt  ai.cpp  game.cpp  main.cpp
